Creacion Nav y Footer

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,2 +1,5 @@
-<h2>Perros hptas</h2>
+<app-navbar></app-navbar>
+
 <router-outlet></router-outlet>
+<app-hero></app-hero>
+<app-footer></app-footer>
