--- a/client/src/app/public/master-page/hero/hero.component.html
+++ b/client/src/app/public/master-page/hero/hero.component.html
@@ -1,2 +1,8 @@
-<p>hero works!</p>
-<h2>adsdsad</h2>
+<div class="carousel">
+    <a class="carousel-item" href="#one!"><img src="assets/images/logo.png"></a>
+    <a class="carousel-item" href="#two!"><img src="assets/images/logo.png"></a>
+    <a class="carousel-item" href="#three!"><img src="assets/images/logo.png"></a>
+    <a class="carousel-item" href="#four!"><img src="assets/images/logo.png"></a>
+    <a class="carousel-item" href="#five!"><img src="assets/images/logo.png"></a>
+  </div>
+<img class="hero-logo" src="assets/images/logo.png">
