--- a/client/src/app/public/master-page/navbar/navbar.component.html
+++ b/client/src/app/public/master-page/navbar/navbar.component.html
@@ -1,7 +1,9 @@
 <div class="navbar-fixed">
     <nav>
-      <div class="nav-wrapper">
-        <a href="#!" class="brand-logo">Logo</a>
+      <div class="nav-wrapper blue-nav">
+        <div class="logo-container">
+        <img src="assets/images/logo2.png" class="logo">
+        </div>
         <ul class="right hide-on-med-and-down">
           <li><a href="sass.html">Sass</a></li>
           <li><a href="badges.html">Components</a></li>
