--- a/client/src/app/public/master-page/hero/hero.component.css
+++ b/client/src/app/public/master-page/hero/hero.component.css
@@ -1,4 +1,17 @@
 .hero-logo{
- display: block;
- margin: auto;
+display:block;
+margin:auto;
+ width: 20%;
+ height: 10%;
+ margin-bottom: 3%;
+}
+.arreglo{
+    display:block;
+    margin:auto;
+    width: 70%;
+}
+.imagen-carrusel{
+    float: left;
+    width: 100%;
+    height: 100%;
 }
