--- a/client/src/app/public/master-page/hero/hero.component.html
+++ b/client/src/app/public/master-page/hero/hero.component.html
@@ -1,8 +1,23 @@
-<div class="carousel">
-    <a class="carousel-item" href="#one!"><img src="assets/images/logo.png"></a>
-    <a class="carousel-item" href="#two!"><img src="assets/images/logo.png"></a>
-    <a class="carousel-item" href="#three!"><img src="assets/images/logo.png"></a>
-    <a class="carousel-item" href="#four!"><img src="assets/images/logo.png"></a>
-    <a class="carousel-item" href="#five!"><img src="assets/images/logo.png"></a>
+<div >
+  <img class="hero-logo" src="assets/images/logo.png">
+  <div class="carousel carousel-slider center arreglo">
+
+    <div class="carousel-item red white-text" href="#one!">
+      
+      <img class="imagen-carrusel"src="assets/images/casa1.jpg">
+    </div>
+    <div class="carousel-item amber white-text" href="#two!">
+      <h2>Second Panel</h2>
+      <p class="white-text">This is your second panel</p>
+    </div>
+    <div class="carousel-item green white-text" href="#three!">
+      <h2>Third Panel</h2>
+      <p class="white-text">This is your third panel</p>
+    </div>
+    <div class="carousel-item blue white-text" href="#four!">
+      <h2>Fourth Panel</h2>
+      <p class="white-text">This is your fourth panel</p>
+    </div>
   </div>
-<img class="hero-logo" src="assets/images/logo.png">
+</div>
+<h1>hola mundo</h1>
