Rutas Departamento y Ciudad en el navbar

--- a/client/src/app/public/master-page/navbar/navbar.component.html
+++ b/client/src/app/public/master-page/navbar/navbar.component.html
@@ -2,11 +2,12 @@
     <nav>
       <div class="nav-wrapper blue-nav">
         <div class="logo-container">
-        <img src="assets/images/logo2.png" class="logo">
+        <img routerLink="/home" src="assets/images/logo2.png" class="logo">
         </div>
         <ul class="right hide-on-med-and-down">
-          <li><a href="sass.html">Sass</a></li>
-          <li><a href="badges.html">Components</a></li>
+          <li><a routerLink="/department/list">Departamento</a></li>
+          <li><a routerLink="/city/list">Ciudad</a></li>
+          <li><a href="badges.html">Inmueble</a></li>
         </ul>
       </div>
     </nav>
