--- a/client/src/app/public/master-page/hero/hero.component.html
+++ b/client/src/app/public/master-page/hero/hero.component.html
@@ -1,23 +1,8 @@
-<div >
-  <img class="hero-logo" src="assets/images/logo.png">
-  <div class="carousel carousel-slider center arreglo">
-
-    <div class="carousel-item red white-text" href="#one!">
-      
-      <img class="imagen-carrusel"src="assets/images/casa1.jpg">
-    </div>
-    <div class="carousel-item amber white-text" href="#two!">
-      <h2>Second Panel</h2>
-      <p class="white-text">This is your second panel</p>
-    </div>
-    <div class="carousel-item green white-text" href="#three!">
-      <h2>Third Panel</h2>
-      <p class="white-text">This is your third panel</p>
-    </div>
-    <div class="carousel-item blue white-text" href="#four!">
-      <h2>Fourth Panel</h2>
-      <p class="white-text">This is your fourth panel</p>
-    </div>
+<section class="hero">
+  <div class="hero-inner">
+    <h1>My Awesome Hotel!</h1>
+    <h2>You can enjoy your life here!</h2>
+    <!--<a routerLink="/home" class="btn blue">Hotels</a> &nbsp;&nbsp;
+        <a routerLink="/security/login" class="btn blue">Login!</a>-->
   </div>
-</div>
-<h1>hola mundo</h1>
+</section>
