Configuracion de Rutar y Creacion de Inmueble

--- a/client/src/app/modules/security/login/login.component.html
+++ b/client/src/app/modules/security/login/login.component.html
@@ -1,7 +1,8 @@
-
+<br />
+<br />
 <div id="login-page" class="row">
     <div class="col s12 z-depth-6 card-panel">
-    <form [formGroup]="fgValidation" (ngSubmit)="loginEvent"() class="login-form">
+    <form [formGroup]="fgValidation" class="login-form">
         <div class="row">
         </div>
         <div class="row">
@@ -51,7 +52,7 @@
         </div>
         <div class="row">
         <div class="input-field col s6 m6 l6">
-            <p class="margin medium-small"><a href="#">Register Now!</a></p>
+            <p class="margin medium-small"><a routerLink="/security/register">Register Now!</a></p>
         </div>
         <div class="input-field col s6 m6 l6">
             <p class="margin right-align medium-small"><a href="#">Forgot password?</a></p>
@@ -61,3 +62,5 @@
     </form>
     </div>
 </div> 
+<br />
+<br />
