--- a/client/src/app/public/master-page/hero/hero.component.html
+++ b/client/src/app/public/master-page/hero/hero.component.html
@@ -1,7 +1,7 @@
 <section class="hero">
   <div class="hero-inner">
-    <h1>My Awesome Hotel!</h1>
-    <h2>You can enjoy your life here!</h2>
+    <h1>¡El detalle está en</h1>
+    <h2>NUESTRAS CASAS!</h2>
     <!--<a routerLink="/home" class="btn blue">Hotels</a> &nbsp;&nbsp;
         <a routerLink="/security/login" class="btn blue">Login!</a>-->
   </div>
