--- a/client/src/app/public/master-page/navbar/navbar.component.html
+++ b/client/src/app/public/master-page/navbar/navbar.component.html
@@ -1,14 +1,16 @@
-<<<<<<< HEAD
 <!-- inicio navbar -->
 <nav>
-  <div class="nav-wrapper  brown darken-3">
-    <a routerLink="/home" class="brand-logo">Home</a>
+  <div class="nav-wrapper #00897b teal darken-2">
+    <a routerLink="/home" class="brand-logo">Home Colombia</a>
     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
       <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Dropdown<i
-            class="material-icons right">arrow_drop_down</i></a></li>
+            class="material-icons right">account_circle</i></a></li>
       <li><a routerLink="/security/login">Login</a></li>
       <li><a routerLink="/security/logout">Logout</a></li>
+      <li><a routerLink="/department/list">Department</a></li>
+      <li><a routerLink="/city/list">Ciudad</a></li>
+      <li><a routerLink="/inmueble/list">Inmueble</a></li>
     </ul>
   </div>
 </nav>
@@ -26,20 +28,6 @@
 <ul class="sidenav" id="mobile-demo">
   <li><a routerLink="/security/login">Login</a></li>
   <li><a routerLink="/security/logout">Logout</a></li>
+  <li><a routerLink="/department/list">Department</a></li>
+  <li><a routerLink="/city/list">Ciudad</a></li>
 </ul>
-=======
-<div class="navbar-fixed">
-    <nav>
-      <div class="nav-wrapper blue-nav">
-        <div class="logo-container">
-        <img routerLink="/home" src="assets/images/logo2.png" class="logo">
-        </div>
-        <ul class="right hide-on-med-and-down">
-          <li><a routerLink="/department/list">Departamento</a></li>
-          <li><a routerLink="/city/list">Ciudad</a></li>
-          <li><a href="badges.html">Inmueble</a></li>
-        </ul>
-      </div>
-    </nav>
-  </div>
->>>>>>> f3df246876bf2f9dd6a86251e51d43c4ef20434a
