--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,21 +1,9 @@
-
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-<router-outlet>
-    
-</router-outlet>
-=======
-</head>
-<body> 
->>>>>>> f3df246876bf2f9dd6a86251e51d43c4ef20434a
-    <app-navbar></app-navbar>
+<app-navbar></app-navbar>
 <app-hero></app-hero>
-    <router-outlet></router-outlet>
- 
-    <app-footer></app-footer>
-<<<<<<< HEAD
-=======
-</body>
->>>>>>> a4c9b49266dbc8b7e51a1c45b857f3686150c381
->>>>>>> f3df246876bf2f9dd6a86251e51d43c4ef20434a
+
+<div class="container">
+    <router-outlet>
+    </router-outlet>
+</div>
+
+<app-footer></app-footer>
