Creacion del servicio de seguridad del login e implementacion del login

--- a/client/src/app/public/master-page/navbar/navbar.component.html
+++ b/client/src/app/public/master-page/navbar/navbar.component.html
@@ -1,13 +1,14 @@
 <!-- inicio navbar -->
 <nav>
+  <strong *ngIf="userLogged">{{userName}}</strong>
   <div class="nav-wrapper #00897b teal darken-2">
     <a routerLink="/home" class="brand-logo">Home Colombia</a>
     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
       <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Dropdown<i
             class="material-icons right">account_circle</i></a></li>
-      <li><a routerLink="/security/login">Login</a></li>
-      <li><a routerLink="/security/logout">Logout</a></li>
+      <li *ngIf="!userLogged"><a routerLink="/security/login">Login</a></li>
+      <li *ngIf="userLogged"><a routerLink="/security/logout">Logout</a></li>
       <li><a routerLink="/department/list">Department</a></li>
       <li><a routerLink="/city/list">Ciudad</a></li>
       <li><a routerLink="/inmueble/list">Inmueble</a></li>
@@ -26,8 +27,8 @@
 
 <!-- componentes adaptado mobil -->
 <ul class="sidenav" id="mobile-demo">
-  <li><a routerLink="/security/login">Login</a></li>
-  <li><a routerLink="/security/logout">Logout</a></li>
+  <li><a *ngIf="!userLogged" routerLink="/security/login">Login</a></li>
+  <li><a *ngIf="userLogged" routerLink="/security/logout">Logout</a></li>
   <li><a routerLink="/department/list">Department</a></li>
   <li><a routerLink="/city/list">Ciudad</a></li>
 </ul>
