--- a/client/src/app/modules/security/login/login.component.html
+++ b/client/src/app/modules/security/login/login.component.html
@@ -2,7 +2,7 @@
 <br />
 <div id="login-page" class="row">
     <div class="col s12 z-depth-6 card-panel">
-    <form [formGroup]="fgValidation" class="login-form">
+    <form [formGroup]="fgValidation" (ngSubmit)="loginEvent()" class="login-form">
         <div class="row">
         </div>
         <div class="row">
