--- a/client/src/app/modules/parameters/department/department-list/department-list.component.html
+++ b/client/src/app/modules/parameters/department/department-list/department-list.component.html
@@ -31,12 +31,13 @@
                 {{dept.name}}
             </td>
             <td>
-                <a routerLink="" class="waves-effect waves-light btn orange">Edit
+                <a routerLink="/department/editor/{{dept.id}}" class="waves-effect waves-light btn orange">Edit
                     <i class="material-icons right">edit</i>
                 </a>
             </td>
             <td>
-                <button class="btn waves-effect waves-light red" type="button">Delete
+                <button class="btn waves-effect waves-light red" type="button"
+                    (click)="openConfirmation(dept.id)">Delete
                     <i class="material-icons right">delete</i>
                 </button>
             </td>
@@ -52,7 +53,7 @@
     </div>
     <div class="modal-footer">
         <a class="modal-close waves-effect waves-green btn red">Cancel</a> &nbsp;
-        <a class="modal-close waves-effect waves-green btn green" >Confirm</a>
-        
+        <a class="modal-close waves-effect waves-green btn green" (click)="onDeleteDepartment()">Confirm</a>
+
     </div>
 </div>
