--- a/client/src/app/public/master-page/navbar/navbar.component.html
+++ b/client/src/app/public/master-page/navbar/navbar.component.html
@@ -1,14 +1,14 @@
 <!-- inicio navbar -->
 <nav>
-  <strong *ngIf="userLogged">{{userName}}</strong>
+ 
   <div class="nav-wrapper #00897b teal darken-2">
     <div class="logo-div">
     <a routerLink="/home" ><h3 class="logo">HomeColombia</h3></a>
   </div>
     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
-      <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Dropdown<i
-            class="material-icons right">account_circle</i></a></li>
+      <li><a class="dropdown-trigger" *ngIf="userLogged" href="#!" data-target="dropdown1">{{userName}}
+        <i *ngIf="userLogged"class="material-icons right">account_circle</i></a></li>
       <li *ngIf="!userLogged"><a routerLink="/security/login">Login</a></li>
       <li *ngIf="userLogged"><a routerLink="/security/logout">Logout</a></li>
       <li><a routerLink="/department/list">Department</a></li>
