--- a/client/src/app/modules/parameters/department/department-creator/department-creator.component.html
+++ b/client/src/app/modules/parameters/department/department-creator/department-creator.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <form [formGroup]="frmValidator"  class="col s12">
+    <form [formGroup]="frmValidator" (ngSubmit)="SaveDepartment()" class="col s12">
         <div class="row">
             <div class="input-field col s3">
                 <input id="Code" formControlName="code" type="text" class="validate">
@@ -12,16 +12,14 @@
                 <input id="Name" formControlName="name" type="text" class="validate">
                 <label for="Name">Name</label>
                 <div class="warning-validation" *ngIf="fv.name.errors && (fv.name.dirty || fv.name.touched)">
-                    <strong *ngIf="fv.name.errors.required">Please, enter a name!</strong>
-                    <strong *ngIf="fv.name.errors.minlength">Please, the name must be at least 4 characters
-                        long!</strong>
-                </div>
+                        <strong *ngIf="fv.name.errors.required">Please, enter a name!</strong>
+                        <strong *ngIf="fv.name.errors.minlength">Please, the name must be at least 4 characters long!</strong>
+                    </div>
             </div>
         </div>
         <div class="row">
             <div class="col s12">
-                <button [disabled]="fv.name.errors || fv.code.errors" class="btn waves-effect waves-light" type="submit"
-                    name="action">Save
+                <button [disabled]="fv.name.errors || fv.code.errors" class="btn waves-effect waves-light" type="submit" name="action">Save
                     <i class="material-icons right">send</i>
                 </button>
             </div>
