--- a/client/src/app/public/master-page/navbar/navbar.component.html
+++ b/client/src/app/public/master-page/navbar/navbar.component.html
@@ -1,19 +1,19 @@
 <!-- inicio navbar -->
 <nav>
  
-  <div class="nav-wrapper #00897b teal darken-2">
+  <div class="nav-wrapper black">
     <div class="logo-div">
-    <a routerLink="/home" ><h3 class="logo">HomeColombia</h3></a>
+    <a routerLink="/home" class="nav-link" ><img src="assets/images/Imagen1.jpg" class="logo"></a>
   </div>
     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
       <li><a class="dropdown-trigger" *ngIf="userLogged" href="#!" data-target="dropdown1">{{userName}}
         <i *ngIf="userLogged"class="material-icons right">account_circle</i></a></li>
-      <li *ngIf="!userLogged"><a routerLink="/security/login">Login</a></li>
+      <li *ngIf="!userLogged"><a routerLink="/security/login"><h5>Login</h5></a></li>
       <li *ngIf="userLogged"><a routerLink="/security/logout">Logout</a></li>
-      <li><a routerLink="/department/list">Department</a></li>
-      <li><a routerLink="/city/list">Ciudad</a></li>
-      <li><a routerLink="/inmueble/list">Inmueble</a></li>
+      <li *ngIf="userLogged"><a routerLink="/department/list">Department</a></li>
+      <li *ngIf="userLogged"><a routerLink="/city/list">Ciudad</a></li>
+      <li *ngIf="userLogged"><a routerLink="/inmueble/list">Inmueble</a></li>
     </ul>
   </div>
 </nav>
@@ -31,6 +31,6 @@
 <ul class="sidenav" id="mobile-demo">
   <li><a *ngIf="!userLogged" routerLink="/security/login">Login</a></li>
   <li><a *ngIf="userLogged" routerLink="/security/logout">Logout</a></li>
-  <li><a routerLink="/department/list">Department</a></li>
-  <li><a routerLink="/city/list">Ciudad</a></li>
+  <li><a *ngIf="userLogged"routerLink="/department/list">Department</a></li>
+  <li><a *ngIf="userLogged" routerLink="/city/list">Ciudad</a></li>
 </ul>
