Implementacion del color

--- a/client/src/app/public/master-page/footer/footer.component.html
+++ b/client/src/app/public/master-page/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="page-footer black">
+<footer class="page-footer azulito">
     <div class="container blue-nav">
       <div class="row blue-nav">
         <div class="col l6 s12 blue-nav">
