--- a/client/src/app/public/master-page/navbar/navbar.component.html
+++ b/client/src/app/public/master-page/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <!-- inicio navbar -->
 <nav>
  
-  <div class="nav-wrapper black">
+  <div class="nav-wrapper azulito">
     <div class="logo-div">
     <a routerLink="/home" class="nav-link" ><img src="assets/images/Imagen1.jpg" class="logo"></a>
   </div>
