Implementacion del color 2.0

--- a/client/src/app/public/master-page/navbar/navbar.component.css
+++ b/client/src/app/public/master-page/navbar/navbar.component.css
@@ -16,6 +16,9 @@ margin-bottom: 1%;
 margin-left: 5%;
 float: left;
 }
+.azulito {
+    background-color: #3d4ca0 !important;
+  }
 .nav-link{
     width: 1px;
     height: 1px;
