--- a/client/src/app/modules/parameters/city/city-creator/city-creator.component.html
+++ b/client/src/app/modules/parameters/city/city-creator/city-creator.component.html
@@ -1,5 +1,7 @@
+<br />
+
 <div class="row">
-    <form [formGroup]="frmValidator" class="col s12">
+    <form [formGroup]="frmValidator" (ngSubmit) = "SaveCity()" class="col s12">
         <div class="row">
             <div class="input-field col s2">
                 <input id="txtCode" formControlName="code" type="text" class="validate">
@@ -19,10 +21,10 @@
             </div>
             <div class="col s5">
                 <div class="col s12">
-                    <label>Country</label>
-                    <select class="" formControlName="departmentId" >
+                    <label>Department</label>
+                    <select class="browser-default" formControlName="departmentId" >
                         <option value="">Select Department</option>
-                        <option *ngFor="" value="2">hola</option>
+                        <option *ngFor="let c of departments" value="{{c.id}}">{{c.name}}</option>
                     </select>
                 </div>
             </div>
