--- a/client/src/app/modules/parameters/city/city-list/city-list.component.html
+++ b/client/src/app/modules/parameters/city/city-list/city-list.component.html
@@ -24,7 +24,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let c of cityList | paginate: { itemsPerPage: 3, currentPage: p }">
+        <tr *ngFor="let c of cities | paginate: { itemsPerPage: 3, currentPage: p }">
             <td>
                 {{c.code}}
             </td>
@@ -32,7 +32,7 @@
                 {{c.name}}
             </td>
             <td>
-                {{c.departmentId}}
+                {{c._departmentId}}
             </td>
             <td>
                 <a routerLink="" class="waves-effect waves-light btn orange">Edit
@@ -40,7 +40,8 @@
                 </a>
             </td>
             <td>
-                <button class="btn waves-effect waves-light red" type="button" name="action">Delete
+                <button class="btn waves-effect waves-light red" type="button" name="action"
+                    (click)="openConfirmation(c.id)">Delete
                     <i class="material-icons right">delete</i>
                 </button>
             </td>
@@ -49,4 +50,14 @@
 </table>
 <pagination-controls (pageChange)="p = $event"></pagination-controls>
 
+<div id="modalConfirmation" class="modal">
+    <div class="modal-content">
+        <h4>Confirmation Window</h4>
+        <p>Do you confirm remove this element?</p>
+    </div>
+    <div class="modal-footer">
+        <a class="modal-close waves-effect waves-green btn red">Cancel</a> &nbsp;
+        <a class="modal-close waves-effect waves-green btn green" (click)="DeleteCity()">Confirm</a>
 
+    </div>
+</div>
