registro de usuarios en loopback y control de errores

--- a/client/src/app/public/master-page/footer/footer.component.html
+++ b/client/src/app/public/master-page/footer/footer.component.html
@@ -1,9 +1,18 @@
-<footer class="page-footer azulito">
+<footer class="page-footer blue">
     <div class="container blue-nav">
       <div class="row blue-nav">
         <div class="col l6 s12 blue-nav">
           <h5 class="white-text"></h5>
           <p class="grey-text text-lighten-4">Vive mejor</p>
+        </div>
+
+        <div class="col l4 offset-l2 s12">
+          <h5 class="white-text">Links</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 1: El Potro de Mocoa</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 2: El Caballo del Charco</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 3: Richi Picha Brava</a></li> 
+          </ul>
         </div>
        
       </div>
