--- a/client/src/app/modules/security/register/register.component.html
+++ b/client/src/app/modules/security/register/register.component.html
@@ -1,63 +1,29 @@
+<br>
 <div class="container section ">
     <div class="row ">
-        <form [formGroup]="RValidation" class="col s12">
+        <form [formGroup]="RValidation" (ngSubmit)="onRegister()" class="col s12">
             <br>
             <div class="card-panel">
+                <h5 class="center-align">Register</h5>
                 <br>
+
                 <div class="row">
 
-                    <!-- NAME -->
+                    <!-- username -->
                     <div class="input-field col s6">
-                        <input id="first_name" formControlName="firstname" type="text" class="validate">
-                        <label for="first_name">First Name</label>
-
-                        <!-- VALIDACIONES FIRST NAME -->
-                        <div *ngIf="rr.firstname.errors && (rr.firstname.dirty || rr.firstname.touched)"
-                            class="warning-validation">
-
-                            <!-- TIPO DE ERRORES -->
-                            <strong *ngIf="rr.firstname.errors.required">Username is required!</strong>
-                            <strong *ngIf="rr.firstname.errors.maxlength">Username must be up to 12 char!</strong>
-                        </div>
+                        <input id="first_name" formControlName="username" type="text" class="validate">
+                        <label for="first_name">Username</label>
                     </div>
 
-                    <!--LAST-->
+                    <!-- last name-->
                     <div class="input-field col s6">
                         <input id="secondName" formControlName="lastname" type="text" class="validate">
-                        <label for="secondName">Second Name</label>
-
-                        <!-- VALIDACIONES FIRST NAME -->
-                        <div *ngIf="rr.lastname.errors && (rr.lastname.dirty || rr.lastname.touched)"
-                            class="warning-validation">
-
-                            <!-- TIPO DE ERRORES -->
-                            <strong *ngIf="rr.lastname.errors.required">Username is required!</strong>
-                            <strong *ngIf="rr.lastname.errors.maxlength">Username must be up to 12 char!</strong>
-                        </div>
-
+                        <label for="secondName">Last Name</label>
                     </div>
                 </div>
 
-                <!-- APELLIDOS-->
+                <!-- PHONE-->
                 <div class="row">
-                    <div class="input-field col s6">
-                        <input id="firstLastName" formControlName="firstname" type="text" class="validate">
-                        <label for="firstLastName">First Last Name</label>
-                    </div>
-
-                    <div class="input-field col s6">
-                        <input id="secondLastName" formControlName="firstname" type="text" class="validate">
-                        <label for="secondLastName">Second Last Name</label>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="input-field col s6">
-                        <input id="address" formControlName="firstname" type="text" class="validate">
-                        <label for="address">Address</label>
-                    </div>
-
-
                     <div class="input-field col s6">
                         <input id="phone" formControlName="phone" type="text" class="validate">
                         <label for="phone">Phone</label>
@@ -67,17 +33,16 @@
                 <!--Email y password-->
                 <div class="row">
                     <div class="input-field col s6">
-                        <input id="email" formControlName="username" type="email" class="validate">
-                        <label for="email">Username (Email)</label>
+                        <input id="email" formControlName="email" type="email" class="validate">
+                        <label for="email">Email</label>
 
                         <!-- validaciones username -->
-                        <div *ngIf="rr.username.errors && (rr.username.dirty || rr.username.touched)"
-                            class="warning-validation">
+                        <div *ngIf="rr.email.errors && (rr.email.dirty || rr.email.touched)" class="warning-validation">
                             <!-- tipos de errores -->
-                            <strong *ngIf="rr.username.errors.required">Username is required!</strong>
-                            <strong *ngIf="rr.username.errors.minlength"> Username must be at least 5 char!</strong>
-                            <strong *ngIf="rr.username.errors.maxlength"> Username must be up to 20 char!</strong>
-                            <strong *ngIf="rr.username.errors.email"> Username must be an email!</strong>
+                            <strong *ngIf="rr.email.errors.required">email is required!</strong>
+                            <strong *ngIf="rr.email.errors.minlength"> email must be at least 5 char!</strong>
+                            <strong *ngIf="rr.email.errors.maxlength"> email must be up to 20 char!</strong>
+                            <strong *ngIf="rr.email.errors.email"> must be an email!</strong>
                         </div>
                     </div>
 
@@ -89,13 +54,35 @@
                         <div *ngIf="rr.password.errors && (rr.password.dirty || rr.password.touched)"
                             class="warning-validation">
                             <!-- tipos de errores -->
-                            <strong *ngIf="rr.password.errors.required">Username is required!</strong>
-                            <strong *ngIf="rr.password.errors.minlength">Username must be at least 4 char!</strong>
-                            <strong *ngIf="rr.password.errors.maxlength">Username must be up to 15 char!</strong>
+                            <strong *ngIf="rr.password.errors.required">password is required!</strong>
+                            <strong *ngIf="rr.password.errors.minlength">password must be at least 4 char!</strong>
+                            <strong *ngIf="rr.password.errors.maxlength">password must be up to 15 char!</strong>
                         </div>
+                    </div>
+
+                    <div>
+                        <button class="btn waves-effect waves-light" type="submit">Submit
+                            <i class="material-icons right">send</i>
+                        </button>
                     </div>
                 </div>
             </div>
+            <div >
+                <re-captcha (resolved)="resolved($event)" siteKey="6LeStNkUAAAAAEfBEe3OVHKfrMDIjnDInQkyIHRf">
+                </re-captcha>
+            </div>
         </form>
+    </div>
+</div>
+<br>
+
+<!-- Modal Structure -->
+<div id="modalConfirmation" class="modal">
+    <div class="modal-content">
+        <h4>HomeColombia Message</h4>
+        <p>Forgot captcha validation or the required data is incorrect or empty.</p>
+    </div>
+    <div class="modal-footer">
+        <a class="modal-close waves-effect waves-green btn-flat">Close</a>
     </div>
 </div>
